Initial commit of baseline code

--- a/churn_prediction/code/sample.ipynb
+++ b/churn_prediction/code/sample.ipynb
@@ -331,6 +331,13 @@
     }
    ],
    "source": [
+    "tracker = EmissionsTracker(project_name = \"churn_prediction\",\n",
+    "                           output_dir = \"../output/\",\n",
+    "                           measure_power_secs = 15,\n",
+    "                           save_to_file = True)\n",
+    "\n",
+    "tracker.start()\n",
+    "\n",
     "net = get_CHURN_model()\n",
     "\n",
     "optimizer = optim.Adam(net.parameters(), weight_decay=0.0001, lr=0.003)\n",
@@ -344,7 +351,9 @@
     "\n",
     "privacy_engine.attach(optimizer)\n",
     "\n",
-    "model = train(trainloader, net, optimizer, batch_size)"
+    "model = train(trainloader, net, optimizer, batch_size)\n",
+    "\n",
+    "emissions: float = tracker.stop()"
    ]
   },
   {
@@ -361,16 +370,13 @@
     }
    ],
    "source": [
+    "print(\"**** Differential Privacy *******\")\n",
     "epsilon, best_alpha = privacy_engine.get_privacy_spent()\n",
-    "print (f\" ε = {epsilon:.2f}, δ = {privacy_engine.target_delta}\")"
+    "print (f\" ε = {epsilon:.2f}, δ = {privacy_engine.target_delta}\")\n",
+    "\n",
+    "print(\"**** Emissions Information*******\")\n",
+    "print(emissions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
