--- a/carbon_emissions/code/carbon_emissions.ipynb
+++ b/carbon_emissions/code/carbon_emissions.ipynb
@@ -342,7 +342,6 @@
     }
    ],
    "source": [
-    "\n",
     "tracker = EmissionsTracker(project_name = \"churn_prediction\",\n",
     "                           output_dir = \"../output/\",\n",
     "                           measure_power_secs = 15,\n",
@@ -363,7 +362,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "emissions: float = tracker.stop()\n",
+    "print(emissions)"
+   ]
   }
  ],
  "metadata": {
