--- a/differential_privacy/scripts/differential_privacy.ipynb
+++ b/differential_privacy/scripts/differential_privacy.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "class ChurnDataset(Dataset):\n",
     " \n",
-    "    def __init__(self, csv_file):\n",
+    "    def __init__(self, df):\n",
     "  \n",
     "        df = pd.read_csv(csv_file)\n",
     "        \n",
@@ -371,7 +371,6 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (PyTorch 1.8 Python 3.6 GPU Optimized)",
    "language": "python",
