--- a/differential_privacy/scripts/dp_sagemaker.ipynb
+++ b/differential_privacy/scripts/dp_sagemaker.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 53\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
@@ -29,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pytorch_estimator = PyTorch(entry_point = 'train.py',\n",
-    "                            #source_dir = '../code',\n",
+    "pytorch_estimator = PyTorch(entry_point = '../code/train.py',\n",
+    "                            source_dir = '../code',\n",
     "                            instance_type='ml.p3.2xlarge',\n",
     "                            role = role,\n",
     "                            instance_count=1,\n",
@@ -62,262 +54,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3343, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-39-ec3767a4dfe6>\", line 1, in <module>\n",
-      "    pytorch_estimator.fit({'train': 's3://responsibleai/data/churn.csv'})\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 687, in fit\n",
-      "    self._prepare_for_training(job_name=job_name)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 2270, in _prepare_for_training\n",
-      "    self.uploaded_code = self._stage_user_code_in_s3()\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 2345, in _stage_user_code_in_s3\n",
-      "    s3_resource=self.sagemaker_session.s3_resource,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/fw_utils.py\", line 248, in tar_and_upload_dir\n",
-      "    source_files, os.path.join(tmp, _TAR_SOURCE_FILENAME)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/utils.py\", line 337, in create_tar_file\n",
-      "    t.add(sf, arcname=os.path.basename(sf))\n",
-      "  File \"/opt/conda/lib/python3.6/tarfile.py\", line 1931, in add\n",
-      "    if self.name is not None and os.path.abspath(name) == self.name:\n",
-      "  File \"/opt/conda/lib/python3.6/posixpath.py\", line 383, in abspath\n",
-      "    cwd = os.getcwd()\n",
-      "FileNotFoundError: [Errno 2] No such file or directory\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'FileNotFoundError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1169, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 316, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 350, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 1490, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 1448, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 696, in getsourcefile\n",
-      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 725, in getmodule\n",
-      "    file = getabsfile(object, _filename)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 709, in getabsfile\n",
-      "    return os.path.normcase(os.path.abspath(_filename))\n",
-      "  File \"/opt/conda/lib/python3.6/posixpath.py\", line 383, in abspath\n",
-      "    cwd = os.getcwd()\n",
-      "FileNotFoundError: [Errno 2] No such file or directory\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3343, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-39-ec3767a4dfe6>\", line 1, in <module>\n",
-      "    pytorch_estimator.fit({'train': 's3://responsibleai/data/churn.csv'})\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 687, in fit\n",
-      "    self._prepare_for_training(job_name=job_name)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 2270, in _prepare_for_training\n",
-      "    self.uploaded_code = self._stage_user_code_in_s3()\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 2345, in _stage_user_code_in_s3\n",
-      "    s3_resource=self.sagemaker_session.s3_resource,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/fw_utils.py\", line 248, in tar_and_upload_dir\n",
-      "    source_files, os.path.join(tmp, _TAR_SOURCE_FILENAME)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/utils.py\", line 337, in create_tar_file\n",
-      "    t.add(sf, arcname=os.path.basename(sf))\n",
-      "  File \"/opt/conda/lib/python3.6/tarfile.py\", line 1931, in add\n",
-      "    if self.name is not None and os.path.abspath(name) == self.name:\n",
-      "  File \"/opt/conda/lib/python3.6/posixpath.py\", line 383, in abspath\n",
-      "    cwd = os.getcwd()\n",
-      "FileNotFoundError: [Errno 2] No such file or directory\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'FileNotFoundError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3263, in run_ast_nodes\n",
-      "    if (await self.run_code(code, result,  async_=asy)):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3360, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2047, in showtraceback\n",
-      "    value, tb, tb_offset=tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1436, in structured_traceback\n",
-      "    self, etype, value, tb, tb_offset, number_of_lines_of_context)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1336, in structured_traceback\n",
-      "    self, etype, value, tb, tb_offset, number_of_lines_of_context\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1193, in structured_traceback\n",
-      "    tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1150, in format_exception_as_a_whole\n",
-      "    last_unique, recursion_repeat = find_recursion(orig_etype, evalue, records)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 451, in find_recursion\n",
-      "    return len(records), 0\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1169, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 316, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 350, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 1490, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 1448, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 696, in getsourcefile\n",
-      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 725, in getmodule\n",
-      "    file = getabsfile(object, _filename)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 709, in getabsfile\n",
-      "    return os.path.normcase(os.path.abspath(_filename))\n",
-      "  File \"/opt/conda/lib/python3.6/posixpath.py\", line 383, in abspath\n",
-      "    cwd = os.getcwd()\n",
-      "FileNotFoundError: [Errno 2] No such file or directory\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3343, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-39-ec3767a4dfe6>\", line 1, in <module>\n",
-      "    pytorch_estimator.fit({'train': 's3://responsibleai/data/churn.csv'})\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 687, in fit\n",
-      "    self._prepare_for_training(job_name=job_name)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 2270, in _prepare_for_training\n",
-      "    self.uploaded_code = self._stage_user_code_in_s3()\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/estimator.py\", line 2345, in _stage_user_code_in_s3\n",
-      "    s3_resource=self.sagemaker_session.s3_resource,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/fw_utils.py\", line 248, in tar_and_upload_dir\n",
-      "    source_files, os.path.join(tmp, _TAR_SOURCE_FILENAME)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/sagemaker/utils.py\", line 337, in create_tar_file\n",
-      "    t.add(sf, arcname=os.path.basename(sf))\n",
-      "  File \"/opt/conda/lib/python3.6/tarfile.py\", line 1931, in add\n",
-      "    if self.name is not None and os.path.abspath(name) == self.name:\n",
-      "  File \"/opt/conda/lib/python3.6/posixpath.py\", line 383, in abspath\n",
-      "    cwd = os.getcwd()\n",
-      "FileNotFoundError: [Errno 2] No such file or directory\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'FileNotFoundError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3263, in run_ast_nodes\n",
-      "    if (await self.run_code(code, result,  async_=asy)):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3360, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2047, in showtraceback\n",
-      "    value, tb, tb_offset=tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1436, in structured_traceback\n",
-      "    self, etype, value, tb, tb_offset, number_of_lines_of_context)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1336, in structured_traceback\n",
-      "    self, etype, value, tb, tb_offset, number_of_lines_of_context\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1193, in structured_traceback\n",
-      "    tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1150, in format_exception_as_a_whole\n",
-      "    last_unique, recursion_repeat = find_recursion(orig_etype, evalue, records)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 451, in find_recursion\n",
-      "    return len(records), 0\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2895, in _run_cell\n",
-      "    return runner(coro)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/async_helpers.py\", line 68, in _pseudo_sync_runner\n",
-      "    coro.send(None)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3072, in run_cell_async\n",
-      "    interactivity=interactivity, compiler=compiler, result=result)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3282, in run_ast_nodes\n",
-      "    self.showtraceback()\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2047, in showtraceback\n",
-      "    value, tb, tb_offset=tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1436, in structured_traceback\n",
-      "    self, etype, value, tb, tb_offset, number_of_lines_of_context)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1336, in structured_traceback\n",
-      "    self, etype, value, tb, tb_offset, number_of_lines_of_context\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1211, in structured_traceback\n",
-      "    chained_exceptions_tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1150, in format_exception_as_a_whole\n",
-      "    last_unique, recursion_repeat = find_recursion(orig_etype, evalue, records)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 451, in find_recursion\n",
-      "    return len(records), 0\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1169, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 316, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 350, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 1490, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 1448, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 696, in getsourcefile\n",
-      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 725, in getmodule\n",
-      "    file = getabsfile(object, _filename)\n",
-      "  File \"/opt/conda/lib/python3.6/inspect.py\", line 709, in getabsfile\n",
-      "    return os.path.normcase(os.path.abspath(_filename))\n",
-      "  File \"/opt/conda/lib/python3.6/posixpath.py\", line 383, in abspath\n",
-      "    cwd = os.getcwd()\n",
-      "FileNotFoundError: [Errno 2] No such file or directory\n"
+      "2022-02-28 20:23:36 Starting - Starting the training job.."
      ]
     }
    ],
@@ -334,6 +74,7 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (PyTorch 1.8 Python 3.6 GPU Optimized)",
    "language": "python",
