--- a/churn_prediction/scripts/responsible_ai_metrics.ipynb
+++ b/churn_prediction/scripts/responsible_ai_metrics.ipynb
@@ -45,7 +45,11 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split \n",
     "\n",
-    "from opacus import PrivacyEngine"
+    "#library for differential privacy\n",
+    "from opacus import PrivacyEngine\n",
+    "\n",
+    "#library for carbon emission\n",
+    "from codecarbon import EmissionsTracker"
    ]
   },
   {
@@ -66,40 +70,20 @@
    "source": [
     "sagemaker_session = sagemaker.Session()\n",
     "role = get_execution_role()\n",
-    "region = sagemaker_session.boto_session.region_name\n",
-    "\n",
-    "bucket = \"responsibleai\"\n",
-    "data_prefix = \"data\"\n",
-    "input_data_path = \"s3://{}/{}\".format(bucket, data_prefix)\n",
-    "\n",
-    "print(\"region: \" + region)\n",
-    "print(\"role: \" + role)\n",
-    "print(\"input_data_path: \" + input_data_path)"
+    "region = sagemaker_session.boto_session.region_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prepare data\n",
-    "df = pd.read_csv(\"../data/churn.csv\")\n",
-    "\n",
-    "churn_train, churn_test = train_test_split (df, test_size=0.2)\n",
-    "\n",
-    "churn_train.to_csv(\"../data/train_churn_dp.csv\")\n",
-    "churn_test.to_csv(\"../data/test_churn_dp.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_uri = S3Uploader.upload(\"../data/train_churn_dp.csv\", \"s3://{}/{}\".format(bucket, data_prefix)) \n",
-    "test_uri = S3Uploader.upload(\"../data/test_churn_dp.csv\", \"s3://{}/{}\".format(bucket, data_prefix)) "
+    "#Start Emissions Tracker\n",
+    "tracker = EmissionsTracker(project_name = \"churn_prediction\",\n",
+    "                           output_dir = \"../output/\",\n",
+    "                           measure_power_secs = 15,\n",
+    "                           save_to_file = True)"
    ]
   },
   {
@@ -108,7 +92,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pytorch_estimator = PyTorch(entry_point = 'churn.py',\n",
+    "pytorch_estimator = PyTorch(entry_point = '../code/train.py',\n",
+    "                            source_dir = '../code'\n",
     "                            instance_type='ml.p3.2xlarge',\n",
     "                            role = role,\n",
     "                            instance_count=1,\n",
@@ -135,7 +120,14 @@
     }
    ],
    "source": [
-    "pytorch_estimator.fit({'train': 's3://responsibleai/data/train_churn_dp.csv'})"
+    "pytorch_estimator.fit({'train': 's3://responsibleai/data/churn.csv'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate Emissions"
    ]
   },
   {
@@ -143,7 +135,107 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#stop Emissions Tracker and load file\n",
+    "emissions: float = tracker.stop()\n",
+    "S3Uploader.upload(\"../output/emissions.csv\", 's3://responsibleai/churn_prediction/output/emissions.csv')\n",
+    "print(emissions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Explainability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Create the Model\n",
+    "\n",
+    "\n",
+    "## set the Clarify processor\n",
+    "clarify_processor = clarify.SageMakerClarifyProcessor( \n",
+    "                        role=role, \n",
+    "                        instance_count=1, \n",
+    "                        instance_type=\"ml.m5.xlarge\", \n",
+    "                        sagemaker_session=session) \n",
+    "\n",
+    "## point to the data files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate explainability\n",
+    "shap_config = clarify.SHAPConfig( \n",
+    "    baseline=[churn_features.iloc[0].values.tolist()], \n",
+    "    num_samples=15, \n",
+    "    agg_method=\"mean_abs\", \n",
+    "    save_local_shap_values=True,) \n",
+    "\n",
+    "explainability_data_config = clarify.DataConfig( \n",
+    "    s3_data_input_path=train_uri, \n",
+    "    s3_output_path=explainability_output_path, \n",
+    "    label=\"Exited\", \n",
+    "    headers=churn_train.columns.to_list(), \n",
+    "    dataset_type=\"text/csv\") \n",
+    "\n",
+    "clarify_processor.run_explainability( \n",
+    "    data_config=explainability_data_config, \n",
+    "    model_config=model_config, \n",
+    "    explainability_config=shap_config,) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bias_data_config = clarify.DataConfig( \n",
+    "    s3_data_input_path=train_uri, \n",
+    "    s3_output_path=bias_report_output_path, \n",
+    "    label=\"Exited\", \n",
+    "    headers=churn_train.columns.to_list(), \n",
+    "    dataset_type=\"text/csv\") \n",
+    "\n",
+    "model_config = clarify.ModelConfig( \n",
+    "    model_name=model_name, \n",
+    "    instance_type=\"ml.m5.xlarge\", \n",
+    "    instance_count=1,\n",
+    "    accept_type=\"text/csv\", \n",
+    "    content_type=\"text/csv\",) \n",
+    "\n",
+    "predictions_config = clarify.ModelPredictedLabelConfig(probability_threshold=0.8)\n",
+    "\n",
+    "bias_config = clarify.BiasConfig( \n",
+    "    label_values_or_threshold=[1], \n",
+    "    facet_name=\"Gender\", \n",
+    "    facet_values_or_threshold=[0]) \n",
+    "\n",
+    "clarify_processor.run_bias( \n",
+    "    data_config=bias_data_config, \n",
+    "    bias_config=bias_config, \n",
+    "    model_config=model_config, \n",
+    "    model_predicted_label_config=predictions_config, \n",
+    "    pre_training_methods=\"all\", \n",
+    "    post_training_methods=\"all\") "
+   ]
   }
  ],
  "metadata": {
