--- a/churn_prediction/scripts/responsible_ai_metrics.ipynb
+++ b/churn_prediction/scripts/responsible_ai_metrics.ipynb
@@ -2,48 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting opacus\n",
-      "  Downloading opacus-0.15.0-py3-none-any.whl (125 kB)\n",
-      "     |████████████████████████████████| 125 kB 26.1 MB/s            \n",
-      "\u001b[?25hRequirement already satisfied: scipy>=1.2 in /opt/conda/lib/python3.6/site-packages (from opacus) (1.5.4)\n",
-      "Requirement already satisfied: numpy>=1.15 in /opt/conda/lib/python3.6/site-packages (from opacus) (1.19.1)\n",
-      "Requirement already satisfied: torch>=1.3 in /opt/conda/lib/python3.6/site-packages (from opacus) (1.8.1)\n",
-      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.6/site-packages (from torch>=1.3->opacus) (3.10.0.2)\n",
-      "Requirement already satisfied: dataclasses in /opt/conda/lib/python3.6/site-packages (from torch>=1.3->opacus) (0.8)\n",
-      "Installing collected packages: opacus\n",
-      "Successfully installed opacus-0.15.0\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip3 install opacus"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sagemaker\n",
-    "from sagemaker import get_execution_role\n",
-    "from sagemaker.s3 import S3Uploader\n",
-    "from sagemaker.pytorch import PyTorch\n",
-    "\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import boto3 \n",
     "\n",
+    "import sagemaker\n",
+    "from sagemaker import Session  \n",
+    "from sagemaker import get_execution_role\n",
+    "from sagemaker.s3 import S3Uploader\n",
+    "\n",
+    "#library for data preprocessing\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split \n",
+    "\n",
+    "#library for Pytorch\n",
+    "from sagemaker.pytorch import PyTorch\n",
+    "\n",
+    "#library for Bias and Explainability\n",
+    "from sagemaker import clarify \n",
     "\n",
     "#library for differential privacy\n",
     "from opacus import PrivacyEngine\n",
@@ -70,7 +51,18 @@
    "source": [
     "sagemaker_session = sagemaker.Session()\n",
     "role = get_execution_role()\n",
-    "region = sagemaker_session.boto_session.region_name"
+    "region = sagemaker_session.boto_session.region_name\n",
+    "s3_client = boto3.client(\"s3\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = 's3://responsibleai/churn_prediction/data'\n",
+    "output_path = 's3://responsibleai/churn_prediction/output'"
    ]
   },
   {
@@ -84,6 +76,13 @@
     "                           output_dir = \"../output/\",\n",
     "                           measure_power_secs = 15,\n",
     "                           save_to_file = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the Model"
    ]
   },
   {
@@ -146,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Explainability"
+    "### Deploy Model / Create Model"
    ]
   },
   {
@@ -155,9 +154,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Create the Model\n",
-    "\n",
-    "\n",
+    "## Create the Model  - TODO\n",
+    "model_name = \"churn-clarify-model\" \n",
+    "predictor = pytorch_estimator.deploy(initial_instance_count=1, \n",
+    "                         instance_type='ml.p3.2xlarge',\n",
+    "                         model_name = \"churn-clarify-model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up Sagemaker Clarify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## set the Clarify processor\n",
     "clarify_processor = clarify.SageMakerClarifyProcessor( \n",
     "                        role=role, \n",
@@ -165,7 +181,29 @@
     "                        instance_type=\"ml.m5.xlarge\", \n",
     "                        sagemaker_session=session) \n",
     "\n",
-    "## point to the data files"
+    "## point to the data files - TODO\n",
+    "bias_report_output_path = 's3://responsibleai/bias'\n",
+    "\n",
+    "df = pd.read_csv(\"../data/churn.csv\")\n",
+    "df = df.drop([\"Surname\", \"CustomerId\", \"RowNumber\"], axis=1)\n",
+    "categorical = [\"Geography\", \"Gender\"]\n",
+    "churn_frame = pd.get_dummies(df, prefix = categorical)\n",
+    "X = churn_frame.drop(['Exited'], axis=1)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_array  = scaler.fit_transform(X)\n",
+    "X = pd.DataFrame(X_array)\n",
+    "\n",
+    "X.to_csv(\"../data/test.csv\", index=False, header=False)\n",
+    "\n",
+    "train_uri = S3Uploader.upload(\"../data/test.csv\", 's3://responsibleai/data/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Explainability"
    ]
   },
   {
@@ -176,17 +214,23 @@
    "source": [
     "#calculate explainability\n",
     "shap_config = clarify.SHAPConfig( \n",
-    "    baseline=[churn_features.iloc[0].values.tolist()], \n",
     "    num_samples=15, \n",
     "    agg_method=\"mean_abs\", \n",
     "    save_local_shap_values=True,) \n",
     "\n",
     "explainability_data_config = clarify.DataConfig( \n",
     "    s3_data_input_path=train_uri, \n",
-    "    s3_output_path=explainability_output_path, \n",
+    "    s3_output_path=bias_report_output_path, \n",
     "    label=\"Exited\", \n",
-    "    headers=churn_train.columns.to_list(), \n",
+    "    headers=churn_frame.columns.to_list(), \n",
     "    dataset_type=\"text/csv\") \n",
+    "\n",
+    "model_config = clarify.ModelConfig( \n",
+    "    model_name=model_name, \n",
+    "    instance_type=\"ml.p3.2xlarge\", \n",
+    "    instance_count=1,\n",
+    "    accept_type=\"text/csv\", \n",
+    "    content_type=\"text/csv\",) \n",
     "\n",
     "clarify_processor.run_explainability( \n",
     "    data_config=explainability_data_config, \n",
@@ -239,7 +283,6 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (PyTorch 1.8 Python 3.6 GPU Optimized)",
    "language": "python",
